Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P3: Somewhat important
-
Resolution: Done
-
Affects Version/s: Qt Creator 4.7.0-beta1
-
Fix Version/s: Qt Creator 4.7.0-beta2
-
Component/s: Version Control Integration
-
Labels:
-
Environment:Windows 10 1803 64 bit
Description
- Start Creator with empty settings, e.g. using the parameter -settingspath <empty directory>.
- Open a file from a git repository with a gerrit remote.
- Select "Tools" -> "Git" -> "Remote Repository" -> "Gerrit" from the menu.
An error message about the missing Gerrit configuration appears but gets hidden immediately by the opening Options dialog. - Complete the Gerrit configuration and click "OK".
- Now the expected Gerrit dialog appears.
- Try to click "Close".
You can't because the error message - which is outdated now - is modal.
The error message should appear before the Options dialog and stay in front of it. It should definitely not be shown anymore after the configuration was fixed.