Gerrit: Fix modality of warning message for invalid configuration

Task-number: QTCREATORBUG-20535
Change-Id: I4963e3856da12b40a323fbcdab6f0a12a9e15293
Reviewed-by: Tobias Hunger <tobias.hunger@qt.io>